#370 - If an instance refresh request is sent for a removed instance, seamlessly re-register the instance.