@@ -1,17 +1,16 @@
 package com.github.bottomlessarchive.loa.conductor.view.controller;
 
 import com.github.bottomlessarchive.loa.application.domain.ApplicationType;
-import com.github.bottomlessarchive.loa.conductor.service.ServiceContainer;
+import com.github.bottomlessarchive.loa.conductor.service.ServiceInstanceContainer;
 import com.github.bottomlessarchive.loa.conductor.service.domain.ServiceInstanceRefreshContext;
-import com.github.bottomlessarchive.loa.conductor.service.domain.ServiceInstanceRefreshProperty;
+import com.github.bottomlessarchive.loa.conductor.service.domain.ServiceInstanceProperty;
 import com.github.bottomlessarchive.loa.conductor.service.domain.ServiceInstanceRegistrationContext;
-import com.github.bottomlessarchive.loa.conductor.service.domain.ServiceInstanceRegistrationProperty;
 import com.github.bottomlessarchive.loa.conductor.view.request.ServiceInstanceRefreshRequest;
 import com.github.bottomlessarchive.loa.conductor.view.request.ServiceInstanceRegistrationRequest;
-import com.github.bottomlessarchive.loa.conductor.view.response.ServiceInstancePropertyResponse;
 import com.github.bottomlessarchive.loa.conductor.view.response.ServiceInstanceRegistrationResponse;
 import com.github.bottomlessarchive.loa.conductor.view.response.ServiceInstanceResponse;
 import com.github.bottomlessarchive.loa.conductor.view.response.ServiceResponse;
+import com.github.bottomlessarchive.loa.conductor.view.service.ServiceInstanceEntityTransformer;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -25,7 +24,6 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @RestController
@@ -33,7 +31,8 @@ import java.util.stream.Stream;
 @RequiredArgsConstructor
 public class ServiceRegistryController {
 
-    private final ServiceContainer serviceContainer;
+    private final ServiceInstanceContainer serviceInstanceContainer;
+    private final ServiceInstanceEntityTransformer serviceInstanceEntityTransformer;
 
     @PostMapping("/{applicationType}")
     public ServiceInstanceRegistrationResponse registerServiceInstance(@PathVariable final ApplicationType applicationType,
@@ -49,12 +48,12 @@ public class ServiceRegistryController {
                     + serviceInstanceRegistrationRequest.getLocation() + "!");
         }
 
-        final UUID serviceInstanceId = serviceContainer.registerServiceInstance(applicationType,
+        final UUID serviceInstanceId = serviceInstanceContainer.registerServiceInstance(applicationType,
                 ServiceInstanceRegistrationContext.builder()
                         .location(serviceInstanceRegistrationRequest.getLocation())
                         .port(serviceInstanceRegistrationRequest.getPort())
                         .properties(serviceInstanceRegistrationRequest.getProperties().stream()
-                                .map(serviceInstanceRegistrationPropertyRequest -> ServiceInstanceRegistrationProperty.builder()
+                                .map(serviceInstanceRegistrationPropertyRequest -> ServiceInstanceProperty.builder()
                                         .name(serviceInstanceRegistrationPropertyRequest.getName())
                                         .value(serviceInstanceRegistrationPropertyRequest.getValue())
                                         .build()
@@ -72,12 +71,12 @@ public class ServiceRegistryController {
     @PutMapping("/{applicationType}/{instanceId}")
     public void refreshServiceInstance(@PathVariable final ApplicationType applicationType, @PathVariable final UUID instanceId,
             @RequestBody final ServiceInstanceRefreshRequest serviceInstanceRefreshRequest) {
-        serviceContainer.refreshServiceInstance(
+        serviceInstanceContainer.refreshServiceInstance(
                 ServiceInstanceRefreshContext.builder()
                         .instanceId(instanceId)
                         .applicationType(applicationType)
                         .properties(serviceInstanceRefreshRequest.getProperties().stream()
-                                .map(serviceInstanceRegistrationPropertyRequest -> ServiceInstanceRefreshProperty.builder()
+                                .map(serviceInstanceRegistrationPropertyRequest -> ServiceInstanceProperty.builder()
                                         .name(serviceInstanceRegistrationPropertyRequest.getName())
                                         .value(serviceInstanceRegistrationPropertyRequest.getValue())
                                         .build()
@@ -94,23 +93,9 @@ public class ServiceRegistryController {
                 .filter(ApplicationType::isReportStatusAndLocation)
                 .map(applicationType -> {
                     final List<ServiceInstanceResponse> serviceInstanceResponses =
-                            serviceContainer.queryServiceInstances(applicationType).stream()
-                                    .map(serviceEntity -> ServiceInstanceResponse.builder()
-                                            .id(serviceEntity.getId())
-                                            .location(serviceEntity.getLocation())
-                                            .port(serviceEntity.getPort())
-                                            .properties(serviceEntity.getProperties().stream()
-                                                    .map(serviceInstanceEntityProperty -> ServiceInstancePropertyResponse.builder()
-                                                            .name(serviceInstanceEntityProperty.getName())
-                                                            .value(serviceInstanceEntityProperty.getValue())
-                                                            .build()
-                                                    )
-                                            .collect(Collectors.toList())
-                                    )
-                                    .lastHeartbeat(serviceEntity.getLastHeartbeat())
-                                    .build()
-                            )
-                            .toList();
+                            serviceInstanceContainer.queryServiceInstances(applicationType).stream()
+                                    .map(serviceInstanceEntityTransformer::transform)
+                                    .toList();
 
                     return ServiceResponse.builder()
                             .applicationType(applicationType)
@@ -122,23 +107,10 @@ public class ServiceRegistryController {
 
     @GetMapping("/{applicationType}")
     public ServiceResponse queryServiceInstances(@PathVariable final ApplicationType applicationType) {
-        final List<ServiceInstanceResponse> serviceInstanceResponses = serviceContainer.queryServiceInstances(applicationType).stream()
-                .map(serviceEntity -> ServiceInstanceResponse.builder()
-                        .id(serviceEntity.getId())
-                        .location(serviceEntity.getLocation())
-                        .port(serviceEntity.getPort())
-                        .properties(serviceEntity.getProperties().stream()
-                                .map(serviceInstanceEntityProperty -> ServiceInstancePropertyResponse.builder()
-                                        .name(serviceInstanceEntityProperty.getName())
-                                        .value(serviceInstanceEntityProperty.getValue())
-                                        .build()
-                                )
-                                .collect(Collectors.toList())
-                        )
-                        .lastHeartbeat(serviceEntity.getLastHeartbeat())
-                        .build()
-                )
-                .toList();
+        final List<ServiceInstanceResponse> serviceInstanceResponses =
+                serviceInstanceContainer.queryServiceInstances(applicationType).stream()
+                        .map(serviceInstanceEntityTransformer::transform)
+                        .toList();
 
         return ServiceResponse.builder()
                 .applicationType(applicationType)
